src/test/deca/syntax/valid/ourTests/test_class_attributs.deca
//description:test visibilité attributs

class A{
    protected int x=0;
    protected float y=15.0;

}
{

}