src/test/deca/syntax/invalid/ourTests/test_dec_int_float_same_line.deca
{
    int x = 1, float y = 2.0; // Non valide : types différents dans une seule déclaration
}
